chaosvpn (2.15-0) UNRELEASED; urgency=low

  * Restore previous subnet-up/down behaviour for non-windows compiles.

 -- Sven-Haegar Koch <haegar@sdinet.de>  Thu, 20 Sep 2012 21:16:21 +0200

chaosvpn (2.14-0) unstable; urgency=low

  * Disable forwarding of broadcast packets - right now we have OSPF
    traffic on the VPN creating useless traffic.
  * Letting tinc use ipv6 as the transport protocol only creates problems
    for now, so reduced transport protocol to ipv4 only.
  * FreeBSD compilation fixes.
  * Windows compilation works for the first time, thanks to Guus!
    (But support not finished yet)
  * Compiled Debian Wheezy and Unstable packages with hardening enabled.

 -- Sven-Haegar Koch <haegar@sdinet.de>  Tue, 28 Aug 2012 12:38:47 +0200

chaosvpn (2.12-0) unstable; urgency=low

  * Support (and use by default) tinc 1.0.17+ option LocalDiscovery=yes

 -- Sven-Haegar Koch <haegar@sdinet.de>  Sat, 10 Mar 2012 16:03:34 +0100

chaosvpn (2.11-0) unstable; urgency=low

  * Do not write Address= lines in tinc hosts files for hidden=1 nodes.
  * New config option $tincd_raw_config
  * Change default of AddressFamily back to 'ipv4'.
    The previous default of 'any' creates reachability problems for nodes
    reachable over ipv4 and ipv6 talking to ipv4-only nodes.
  * Some smaller internal changes.

 -- Sven-Haegar Koch <haegar@sdinet.de>  Mon, 18 Jul 2011 12:59:36 +0200

chaosvpn (2.10-0) unstable; urgency=low

  * Lots of bugfixes.
  * Configuration option tincd_user to run tincd as non-root
    (Currently not active in the debian package, to be fixed)
  * Rework structure: make main chaosvpn process *completely* unprivileged
    (Currently not active in the debian package, to be fixed)
  * Option for the local admin to merge lots of chaosvpn routes into a
    small number of bigger supernet routes.
  * Option for the local admin to blacklist/whitelist routes received from
    the vpn.
  * Debian packaging switched from crontab/oneshot mode to daemon mode.
